--- a/flipt-client-java/build.gradle
+++ b/flipt-client-java/build.gradle
@@ -3,6 +3,7 @@ import java.nio.file.Files
 plugins {
     id 'java-library'
     id 'maven-publish'
+    id 'signing'
     id "com.diffplug.spotless" version "6.25.0"
 }
 
@@ -100,3 +101,57 @@ tasks.register('checkDirectoryExistence') {
 
 test.dependsOn checkDirectoryExistence
 assemble.dependsOn checkDirectoryExistence
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            artifactId = 'flipt-client-java'
+            from components.java
+
+            pom {
+                name = 'Flipt Client Java SDK'
+                description = 'Flipt Client Java SDK'
+                url = 'https://github.com/flipt-io/flipt-client-sdks/tree/main/flipt-client-java'
+
+                licenses {
+                    license {
+                        name = 'MIT'
+                        url = 'https://opensource.org/license/mit/'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id = 'flipt-io'
+                        name = 'Flipt'
+                        email = 'devs@flipt.io'
+                    }
+                }
+
+                scm {
+                    connection = 'scm:git:git://github.com/flipt-io/flipt-client-sdks.git'
+                    developerConnection = 'scm:git:ssh://github.com/flipt-io/flipt-client-sdks.git'
+                    url = 'https://github.com/flipt-io/flipt-client-sdks/tree/main/flipt-client-java'
+                }
+            }
+        }
+    }
+    repositories {
+        maven {
+            def releasesRepoUrl = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
+            def snapshotsRepoUrl = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
+            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+            credentials {
+                username "$System.env.MAVEN_USERNAME"
+                password "$System.env.MAVEN_PASSWORD"
+            }
+        }
+    }
+}
+
+signing {
+    def signingKey = System.getenv('PGP_PRIVATE_KEY')
+    def signingPassphrase = System.getenv('PGP_PASSPHRASE')
+    useInMemoryPgpKeys(signingKey, signingPassphrase)
+    sign publishing.publications.maven
+}
