--- a/flipt-client-node/package.json
+++ b/flipt-client-node/package.json
@@ -27,8 +27,10 @@
     "@types/jest": "^29.5.10",
     "@types/node": "^20.9.3",
     "@types/ref-napi": "^3.0.12",
+    "@types/uuid": "^9.0.8",
     "jest": "^29.7.0",
     "prettier": "^3.1.0",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "uuid": "^9.0.1"
   }
 }
