refactor: Prep for Wasm (#175)
* chore(wip): refactor for wasm

* refactor: extract all ffi specific code from flipt-evaluation

* chore: add flipt-evaluation to release-please

* chore: rm flipt wasm from cargo toml

* chore: try to fix CI

* chore: rename var

* chore: rm wasm lib for now

* chore: move batch down to eval lib

* chore: fmt

* chore: common visibility

* chore: try to setup codecov (#176)

* chore: apply fixes on main

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -8,6 +8,10 @@
     "flipt-engine-ffi": {
       "component": "flipt-engine-ffi",
       "release-type": "rust"
+    },
+    "flipt-evaluation": {
+      "release-type": "rust",
+      "skip-github-release": true
     }
   }
 }
