--- a/flipt-evaluation/Cargo.toml
+++ b/flipt-evaluation/Cargo.toml
@@ -17,7 +17,8 @@ serde_json = { version = "1.0.89", features = ["raw_value"] }
 uuid = { version = "1.5.0", features = ["v4"] }
 crc32fast = "1.3.2"
 thiserror = "1.0.50"
-chrono = { version = "0.4.31", features = ["serde", "rustc-serialize"] }
+chrono = { version = "0.4.31", features = ["serde"] }
+web-time = "1.1.0"
 
 [dev-dependencies]
 mockall = "0.12.1"
