--- a/flipt-evaluation/Cargo.toml
+++ b/flipt-evaluation/Cargo.toml
@@ -18,7 +18,7 @@ uuid = { version = "1.5.0", features = ["v4"] }
 crc32fast = "1.3.2"
 thiserror = "1.0.50"
 chrono = { version = "0.4.31", features = ["serde"] }
-web-time = "1.1.0"
+instant = "0.1.12"
 
 [dev-dependencies]
 mockall = "0.12.1"
