--- a/flipt-client-browser/tsconfig.json
+++ b/flipt-client-browser/tsconfig.json
@@ -7,11 +7,6 @@
     "strict": true,
     "esModuleInterop": true
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist/**/*"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist/**/*"]
 }
