--- a/release-please-config.json
+++ b/release-please-config.json
@@ -8,6 +8,10 @@
     "flipt-engine-ffi": {
       "component": "flipt-engine-ffi",
       "release-type": "rust"
+    },
+    "flipt-engine-wasm": {
+      "component": "flipt-engine-wasm",
+      "release-type": "rust"
     }
   }
 }
