chore: set env var

--- a/.github/workflows/package-wasm-engine.yml
+++ b/.github/workflows/package-wasm-engine.yml
@@ -11,6 +11,9 @@ on:
 permissions:
   contents: write
 
+env:
+  NPM_API_KEY: ${{ secrets.NPM_API_KEY }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
