chore: add build for browser sdk

--- a/.github/workflows/package-ffi-sdks.yml
+++ b/.github/workflows/package-ffi-sdks.yml
@@ -93,4 +93,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
         run: |
-          dagger run go run ./build/sdks --sdks=${{ inputs.sdk }} --push=true --tag=${{ inputs.tag }}
+          dagger run go run ./build/ffi --sdks=${{ inputs.sdk }} --push=true --tag=${{ inputs.tag }}
