chore: lint/fix ruby issues

--- a/flipt-client-ruby/.rubocop.yml
+++ b/flipt-client-ruby/.rubocop.yml
@@ -2,3 +2,19 @@ inherit_from: .rubocop_todo.yml
 
 Lint/UselessAssignment:
   Enabled: false
+
+Metrics/BlockLength:
+  Max: 35
+  Exclude:
+    - "spec/**/*"
+    - "test/**/*"
+
+Layout/LineLength:
+  Exclude:
+    - "spec/**/*"
+    - "test/**/*"
+
+Style/Documentation:
+  Exclude:
+    - "spec/**/*"
+    - "test/**/*"
