--- a/flipt-client-ruby/.rubocop_todo.yml
+++ b/flipt-client-ruby/.rubocop_todo.yml
@@ -11,23 +11,4 @@
 # Include: **/*.gemspec
 Gemspec/RequiredRubyVersion:
   Exclude:
-    - 'flipt-client-ruby.gemspec'
-
-# Offense count: 1
-Lint/ShadowingOuterLocalVariable:
-  Exclude:
-    - 'lib/evaluation.rb'
-
-# Offense count: 1
-# Configuration parameters: CountComments, CountAsOne, AllowedMethods, AllowedPatterns.
-# AllowedMethods: refine
-Metrics/BlockLength:
-  Max: 35
-
-# Offense count: 1
-# Configuration parameters: AllowedConstants.
-Style/Documentation:
-  Exclude:
-    - 'spec/**/*'
-    - 'test/**/*'
-    - 'lib/evaluation.rb'
+    - "flipt-client-ruby.gemspec"
