--- a/.github/workflows/lint-sdks.yml
+++ b/.github/workflows/lint-sdks.yml
@@ -66,3 +66,22 @@ jobs:
       - name: Lint Java code
         working-directory: flipt-client-java
         run: ./gradlew spotlessCheck
+
+  lint-ruby:
+    name: Lint Ruby
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Sources
+        uses: actions/checkout@v4
+
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: "3.2"
+
+      - name: Lint Ruby code
+        working-directory: flipt-client-ruby
+        run: |
+          gem install bundler
+          bundle install
+          bundle exec rubocop
