--- a/flipt-client-browser/package.json
+++ b/flipt-client-browser/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@flipt-io/flipt-client-browser",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Flipt Client Evaluation Browser SDK",
-  "main": "dist/index.js",
+  "main": "dist/bundle.js",
   "types": "dist/index.d.ts",
   "private": false,
   "author": "Flipt Devs <dev@flipt.io>",
@@ -14,15 +14,18 @@
     "fmt": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "lint": "prettier --check src/**/*.ts",
     "test": "jest",
-    "build": "tsc"
+    "build": "tsc && webpack --mode=production"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
-    "typescript": "^5.4.3"
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.4.3",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "@flipt-io/flipt-engine-wasm": "^0.0.1"
+    "@flipt-io/flipt-engine-wasm": "^0.0.2"
   }
 }
