--- a/flipt-client-browser/tsconfig.json
+++ b/flipt-client-browser/tsconfig.json
@@ -1,12 +1,19 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es2019",
+    "target": "ESNext",
+    "lib": [
+      "ESNext",
+      "DOM"
+    ],
     "declaration": true,
-    "outDir": "dist",
     "strict": true,
-    "esModuleInterop": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist/**/*"]
+  "include": [
+    "lib/**/*",
+  ],
+  "exclude": [
+    "node_modules",
+    "pkg/**/*"
+  ]
 }
