--- a/flipt-client-browser/package.json
+++ b/flipt-client-browser/package.json
@@ -17,12 +17,15 @@
   "scripts": {
     "fmt": "prettier --config .prettierrc 'lib/**/*.ts' --write",
     "lint": "prettier --check lib/**/*.ts",
-    "test": "jasmine",
+    "test": "jest",
     "build": "tsc"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.24.1",
+    "@babel/preset-env": "^7.24.4",
     "@wasm-tool/wasm-pack-plugin": "^1.7.0",
-    "jasmine": "^5.1.0",
+    "babel-plugin-transform-import-meta": "^2.2.1",
+    "jest": "^29.7.0",
     "typescript": "^5.4.3"
   }
 }
