feat: consolidate browser and wasm engine (#226)
* feat(wip): consolidate browser and wasm engine

* chore: architecture

* chore: fmt

* chore: dependabot, cleanup

* chore: move back seperate dir

* chore: dependabot

* chore: update release-please

* chore: fix build

* chore(wip): try to get tests working

* chore: blah tests

* chore: comment out broken test for now

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -51,6 +51,16 @@ updates:
       - "automerge"
 
   - package-ecosystem: "cargo"
+    directory: "/flipt-engine-wasm"
+    schedule:
+      interval: "weekly"
+    open-pull-requests-limit: 5
+    labels:
+      - "dependencies"
+      # kodiak `merge.automerge_label`
+      - "automerge"
+
+  - package-ecosystem: "cargo"
     directory: "/flipt-evaluation"
     schedule:
       interval: "weekly"
