--- a/flipt-client-browser/package.json
+++ b/flipt-client-browser/package.json
@@ -1,28 +1,31 @@
 {
   "name": "@flipt-io/flipt-client-browser",
-  "version": "0.0.4",
+  "version": "0.0.1",
   "description": "Flipt Client Evaluation Browser SDK",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "private": false,
   "author": "Flipt Devs <dev@flipt.io>",
   "license": "MIT",
   "files": [
-    "dist"
+    "lib",
+    "pkg/*.js",
+    "pkg/*.d.ts",
+    "pkg/*.wasm",
+    "pkg/*.wasm.d.ts"
   ],
   "scripts": {
-    "fmt": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "lint": "prettier --check src/**/*.ts",
+    "fmt": "prettier --config .prettierrc 'lib/**/*.ts' --write",
+    "lint": "prettier --check lib/**/*.ts",
     "test": "jest",
     "build": "tsc"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.12",
+    "@babel/plugin-transform-modules-commonjs": "^7.24.1",
+    "@babel/preset-env": "^7.24.4",
+    "@wasm-tool/wasm-pack-plugin": "^1.7.0",
+    "babel-plugin-transform-import-meta": "^2.2.1",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.2",
     "typescript": "^5.4.3"
-  },
-  "dependencies": {
-    "@flipt-io/flipt-engine-wasm": "^0.0.2"
   }
 }
