chore: try once more for wasm

--- a/flipt-client-browser/tsconfig.json
+++ b/flipt-client-browser/tsconfig.json
@@ -7,13 +7,7 @@
       "DOM"
     ],
     "declaration": true,
+    "forceConsistentCasingInFileNames": true,
     "strict": true,
-  },
-  "include": [
-    "lib/**/*",
-  ],
-  "exclude": [
-    "node_modules",
-    "pkg/**/*"
-  ]
+  }
 }
