--- a/flipt-client-browser/tsconfig.json
+++ b/flipt-client-browser/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "ESNext",
     "target": "ESNext",
     "lib": [
       "ESNext",
       "DOM"
     ],
     "declaration": true,
+    "declarationDir": "./dist",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
   }
