--- a/flipt-client-browser/package.json
+++ b/flipt-client-browser/package.json
@@ -1,30 +1,28 @@
 {
   "name": "@flipt-io/flipt-client-browser",
-  "version": "0.0.10",
+  "version": "0.0.15",
   "description": "Flipt Client Evaluation Browser SDK",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "private": false,
   "author": "Flipt Devs <dev@flipt.io>",
   "license": "MIT",
   "files": [
-    "lib",
-    "pkg/*.js",
-    "pkg/*.d.ts",
-    "pkg/*.wasm",
-    "pkg/*.wasm.d.ts"
+    "dist"
   ],
   "scripts": {
-    "fmt": "prettier --config .prettierrc 'lib/**/*.ts' --write",
-    "lint": "prettier --check lib/**/*.ts",
-    "test": "jasmine",
-    "build:typescript": "tsc",
-    "build:wasm": "wasm-pack build --target web --out-dir ./pkg",
-    "build": "npm run build:wasm && npm run build:typescript"
+    "fmt": "prettier --config .prettierrc 'src/**/*.ts' --write",
+    "lint": "prettier --check src/**/*.ts",
+    "test": "jest",
+    "build": "rollup -c"
   },
   "devDependencies": {
-    "@wasm-tool/wasm-pack-plugin": "^1.7.0",
-    "jasmine": "^5.1.0",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "rollup": "^4.14.0",
+    "tslib": "^2.6.2",
     "typescript": "^5.4.3"
   }
 }
