feat: batch evaluation for browser sdk

--- a/flipt-client-browser/tsconfig.json
+++ b/flipt-client-browser/tsconfig.json
@@ -2,13 +2,10 @@
   "compilerOptions": {
     "module": "ESNext",
     "target": "ESNext",
-    "lib": [
-      "ESNext",
-      "DOM"
-    ],
+    "lib": ["ESNext", "DOM"],
     "declaration": true,
     "declarationDir": "./dist",
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
+    "strict": true
   }
 }
