--- a/flipt-client-browser/package.json
+++ b/flipt-client-browser/package.json
@@ -21,6 +21,7 @@
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
+    "node-fetch": "^2.7.0",
     "rollup": "^4.14.0",
     "tslib": "^2.6.2",
     "typescript": "^5.4.3"
