chore: inline wasm

--- a/flipt-client-browser/package.json
+++ b/flipt-client-browser/package.json
@@ -14,16 +14,17 @@
   "scripts": {
     "fmt": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "lint": "prettier --check src/**/*.ts",
-    "test": "jest",
+    "test": "NODE_OPTIONS=--no-experimental-fetch jest",
     "build": "rollup -c"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.1.6",
+    "@rollup/plugin-wasm": "^6.2.2",
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
-    "node-fetch": "^2.7.0",
     "rollup": "^4.14.0",
     "tslib": "^2.6.2",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.3",
+    "undici": "^6.13.0"
   }
 }
