--- a/.github/workflows/package-ffi-sdks.yml
+++ b/.github/workflows/package-ffi-sdks.yml
@@ -68,8 +68,7 @@ jobs:
       - name: Download Mac x86_64 Engine
         run: |
           mkdir -p tmp/darwin_x86_64 && \
-          wget "https://github.com/flipt-io/flipt-client-sdks/releases/download/flipt-engine-ffi-${ENGINE_TAG}/flipt-engine-ffi-Darwin-x86_64.tar.gz" -O /tmp/
-          flipt-engine-ffi-Darwin-x86_64.tar.gz && \
+          wget "https://github.com/flipt-io/flipt-client-sdks/releases/download/flipt-engine-ffi-${ENGINE_TAG}/flipt-engine-ffi-Darwin-x86_64.tar.gz" -O /tmp/flipt-engine-ffi-Darwin-x86_64.tar.gz && \
           mkdir -p /tmp/darwin_x86_64 && \
           tar -xzf /tmp/flipt-engine-ffi-Darwin-x86_64.tar.gz -C /tmp/darwin_x86_64 && \
           mv /tmp/darwin_x86_64/target/x86_64-apple-darwin/release/* tmp/darwin_x86_64
