chore(node): try @2060.io/ffi-napi fork as alternative to original ffi-napi

--- a/flipt-client-node/package.json
+++ b/flipt-client-node/package.json
@@ -19,8 +19,8 @@
   },
   "dependencies": {
     "@types/ffi": "^0.2.7",
-    "ffi-napi": "^4.0.3",
-    "ref-napi": "^3.0.3"
+    "@2060.io/ffi-napi": "^4.0.3",
+    "@2060.io/ref-napi": "^3.0.3"
   },
   "devDependencies": {
     "@types/ffi-napi": "^4.0.10",
