--- a/flipt-client-node/package.json
+++ b/flipt-client-node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@flipt-io/flipt-client",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "description": "Flipt Client Evaluation SDK",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -18,15 +18,14 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@types/ffi": "^0.2.7",
-    "@2060.io/ffi-napi": "^4.0.3",
-    "@2060.io/ref-napi": "^3.0.3"
+    "@2060.io/ffi-napi": "^4.0.9",
+    "@2060.io/ref-napi": "^3.0.6",
+    "@types/ffi": "^0.2.7"
   },
   "devDependencies": {
-    "@types/ffi-napi": "^4.0.10",
     "@types/jest": "^29.5.10",
     "@types/node": "^20.9.3",
-    "@types/ref-napi": "^3.0.12",
+    "@types/ref-struct-di": "^1.1.12",
     "jest": "^29.7.0",
     "prettier": "^3.1.0",
     "ts-jest": "^29.1.1"
