fix: node sdk paths
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/flipt-client-node/tsconfig.json
+++ b/flipt-client-node/tsconfig.json
@@ -4,12 +4,12 @@
     "target": "es2019",
     "declaration": true,
     "outDir": "dist",
+    "rootDir": "src",
     "strict": true,
     "esModuleInterop": true
   },
   "include": [
     "src/**/*",
-    "__tests__"
   ],
   "exclude": [
     "node_modules",
