chore: add back 'ext'

--- a/flipt-client-node/package.json
+++ b/flipt-client-node/package.json
@@ -8,7 +8,8 @@
   "author": "Flipt Devs <dev@flipt.io>",
   "license": "MIT",
   "files": [
-    "dist"
+    "dist",
+    "ext"
   ],
   "scripts": {
     "fmt": "prettier --config .prettierrc 'src/**/*.ts' --write",
