chore: update release.md
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/lint-sdks.yml
+++ b/.github/workflows/lint-sdks.yml
@@ -33,7 +33,7 @@ jobs:
     name: Lint Typescript
     strategy:
       matrix:
-        node-version: ['20', '21']
+        node-version: ["20", "21"]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Sources
