--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,16 @@ updates:
       - "automerge"
 
   - package-ecosystem: npm
+    directory: "/flipt-client-browser"
+    schedule:
+      interval: weekly
+    open-pull-requests-limit: 5
+    labels:
+      - "dependencies"
+      # kodiak `merge.automerge_label`
+      - "automerge"
+
+  - package-ecosystem: npm
     directory: "/flipt-client-node"
     schedule:
       interval: weekly
@@ -61,7 +71,7 @@ updates:
       - "automerge"
 
   - package-ecosystem: "cargo"
-    directory: "/flipt-client-browser"
+    directory: "/flipt-engine-wasm"
     schedule:
       interval: "weekly"
     open-pull-requests-limit: 5
