chore: rename existing wasm engine to wasm-js
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [workspace]
 resolver = "2"
-members = ["./flipt-engine-ffi", "./flipt-engine-wasm", "./flipt-evaluation", "./flipt-evaluation-wasi"]
+members = ["./flipt-engine-ffi", "./flipt-engine-wasm-js", "./flipt-evaluation"]
 
 [profile.release]
 strip = true
 rpath = true
 
-[profile.release.package.flipt-engine-wasm]
+[profile.release.package.flipt-engine-wasm-js]
 opt-level = "s"
