--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["./flipt-engine-ffi", "./flipt-engine-wasm-js", "./flipt-evaluation"]
+members = ["./flipt-engine-ffi", "./flipt-engine-wasm", "./flipt-engine-wasm-js", "./flipt-evaluation"]
 
 [profile.release]
 strip = true
