--- a/flipt-engine-wasm/Cargo.toml
+++ b/flipt-engine-wasm/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "flipt-evaluation-wasi"
+name = "flipt-evaluation-wasm"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,10 +8,9 @@ edition = "2021"
 [lib]
 crate-type = ["cdylib"]
 
-[build]
-target = "wasm32-wasi"
-
 [dependencies]
-wit-bindgen = "0.29.0"
+libc = "0.2.150"
+serde = { version = "1.0.147", features = ["derive"] }
 serde_json = { version = "1.0.89", features = ["raw_value"] }
+thiserror = "1.0.63"
 flipt-evaluation = { path = "../flipt-evaluation" }
