--- a/release-please-config.json
+++ b/release-please-config.json
@@ -10,6 +10,10 @@
       "component": "flipt-engine-ffi",
       "release-type": "rust"
     },
+    "flipt-engine-wasm": {
+      "component": "flipt-engine-wasm",
+      "release-type": "rust"
+    },
     "flipt-engine-wasm-js": {
       "component": "flipt-engine-wasm-js",
       "release-type": "rust"
