--- a/.github/workflows/package-ffi-engine.yml
+++ b/.github/workflows/package-ffi-engine.yml
@@ -1,5 +1,7 @@
 name: Package FFI Engine
 on:
+  pull_request:
+    branches: ["main"]
   push:
     tags: ["flipt-engine-ffi-v**"]
   workflow_dispatch:
@@ -18,31 +20,36 @@ jobs:
         platform:
           - name: Linux-x86_64
             os: ubuntu-latest
-            use_cross: false
             target: x86_64-unknown-linux-gnu
+
           - name: Linux-arm64
             os: ubuntu-latest
             target: aarch64-unknown-linux-gnu
-            use_cross: true
+
+          - name: Linux-x86_64-musl
+            os: ubuntu-latest
+            target: x86_64-unknown-linux-musl
+
+          - name: Linux-arm64-musl
+            os: ubuntu-latest
+            target: aarch64-unknown-linux-musl
+
           - name: Darwin-arm64
             os: macos-latest
             target: aarch64-apple-darwin
-            use_cross: false
+
           - name: Darwin-x86_64
             os: macos-latest
             target: x86_64-apple-darwin
-            use_cross: false
 
     runs-on: ${{ matrix.platform.os }}
+
+    env:
+      CARGO_TERM_COLOR: always
+      OS: ${{ matrix.platform.os }}
+
     steps:
       - uses: actions/checkout@v4
-
-      - name: Install Rust ${{ matrix.platform.name }}
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: ${{ matrix.platform.target }}
-          override: true
 
       - uses: actions/cache@v4
         with:
@@ -54,12 +61,27 @@ jobs:
             target/
           key: ${{ runner.os }}-${{ matrix.platform.target}}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: Build Rust ${{ matrix.platform.name }}
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --target ${{ matrix.platform.target }} --release
-          use-cross: ${{ matrix.platform.use_cross }}
+      - name: Install and configure dependencies
+        run: |
+          # dependencies are only needed on ubuntu as that's the only place where
+          # we make cross-compilation
+          if [[ $OS =~ ^ubuntu.*$ ]]; then
+            sudo apt-get install -qq crossbuild-essential-arm64 crossbuild-essential-armhf
+          fi
+
+          # some additional configuration for cross-compilation on linux
+          cat >>~/.cargo/config <<EOF
+          [target.aarch64-unknown-linux-gnu]
+          linker = "aarch64-linux-gnu-gcc"
+          [target.aarch64-unknown-linux-musl]
+          linker = "aarch64-linux-gnu-gcc"
+          EOF
+
+      - name: Install rust target
+        run: rustup target add ${{ matrix.platform.target }}
+
+      - name: Run build
+        run: cargo build -p flipt-engine-ffi --release --verbose --target ${{ matrix.platform.target }}
 
       - if: startsWith(matrix.platform.name, 'Darwin')
         run: |
@@ -76,7 +98,7 @@ jobs:
 
       - name: Upload Release Assets (Tag)
         uses: softprops/action-gh-release@v2
-        if: github.event_name == 'push'
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
         with:
           tag_name: ${{ github.ref_name }}
           files: |
@@ -84,7 +106,7 @@ jobs:
 
       - name: Upload Release Assets (Workflow Dispatch)
         uses: softprops/action-gh-release@v2
-        if: github.event_name == 'workflow_dispatch'
+        if: github.event_name == 'workflow_dispatch' && !endswith(github.event.inputs.tag, 'pre')
         with:
           tag_name: flipt-engine-ffi-${{ github.event.inputs.tag }}
           files: |
