chore: rework musl package for go
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/package-ffi-sdks.yml
+++ b/.github/workflows/package-ffi-sdks.yml
@@ -74,4 +74,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
         run: |
-          dagger run go run ./build/ffi --sdks=${{ inputs.sdk }} --push=true --tag=${{ inputs.tag }} --engine-tag=${{ env.ENGINE_TAG }} --libc=${{ inputs.libc }}
+          dagger run go run ./package/ffi --sdks=${{ inputs.sdk }} --push=true --tag=${{ inputs.tag }} --engine-tag=${{ env.ENGINE_TAG }} --libc=${{ inputs.libc }}
