--- a/.github/workflows/package-browser-sdk.yml
+++ b/.github/workflows/package-browser-sdk.yml
@@ -29,4 +29,4 @@ jobs:
 
       - name: Build Individual SDK(s)
         run: |
-          dagger run go run ./build/wasm --sdks=browser --push=true
+          dagger run go run ./package/wasm --sdks=browser --push=true
