--- a/.github/workflows/package-node-sdk.yml
+++ b/.github/workflows/package-node-sdk.yml
@@ -13,6 +13,6 @@ jobs:
   build:
     uses: ./.github/workflows/package-ffi-sdks.yml
     with:
-      sdk: node
+      sdks: node
       engine-tag: "latest"
     secrets: inherit
