--- a/.github/workflows/package-ffi-engine.yml
+++ b/.github/workflows/package-ffi-engine.yml
@@ -64,14 +64,14 @@ jobs:
       - name: Install and configure dependencies
         run: |
           if [[ "${{ matrix.platform.os }}" =~ ^ubuntu.*$ ]]; then
-            sudo apt-get install -qq musl-tools musl-dev crossbuild-essential-arm64
+            sudo apt-get install -qq musl-tools musl-dev gcc-aarch64-linux-gnu
           fi
 
           cat >>~/.cargo/config <<EOF
           [target.aarch64-unknown-linux-gnu]
           linker = "aarch64-linux-gnu-gcc"
           [target.aarch64-unknown-linux-musl]
-          linker = "aarch64-linux-musl-gcc"
+          linker = "aarch64-linux-gnu-gcc"
           EOF
 
       - name: Install rust target
