--- a/.github/workflows/package-ffi-engine.yml
+++ b/.github/workflows/package-ffi-engine.yml
@@ -71,7 +71,7 @@ jobs:
           [target.aarch64-unknown-linux-gnu]
           linker = "aarch64-linux-gnu-gcc"
           [target.aarch64-unknown-linux-musl]
-          linker = "aarch64-linux-gnu-gcc"
+          linker = "aarch64-linux-musl-gcc"
           EOF
 
       - name: Install rust target
@@ -83,6 +83,7 @@ jobs:
         run: |
           if [[ "${{ matrix.platform.target }}" == *-musl* ]]; then
             export RUSTFLAGS="-C target-feature=-crt-static"
+            export TARGET_CC="aarch64-linux-musl-gcc"
           fi
           cargo build -p flipt-engine-ffi --release --target ${{ matrix.platform.target }}
 
