--- a/.github/workflows/package-ffi-engine.yml
+++ b/.github/workflows/package-ffi-engine.yml
@@ -31,9 +31,9 @@ jobs:
             os: ubuntu-latest
             target: x86_64-unknown-linux-musl
 
-          - name: Linux-arm64-musl
-            os: ubuntu-latest
-            target: aarch64-unknown-linux-musl
+          # - name: Linux-arm64-musl
+          #   os: ubuntu-latest
+          #   target: aarch64-unknown-linux-musl
 
           - name: Darwin-arm64
             os: macos-latest
@@ -70,9 +70,6 @@ jobs:
           cat >>~/.cargo/config <<EOF
           [target.aarch64-unknown-linux-gnu]
           linker = "aarch64-linux-gnu-gcc"
-          [target.aarch64-unknown-linux-musl]
-          linker = "aarch64-linux-gnu-gcc"
-          rustflags = [ "-C", "target-feature=-crt-static", "-C", "link-arg=-lgcc" ]
           EOF
 
       - name: Install rust target
@@ -82,6 +79,9 @@ jobs:
 
       - name: Run build
         run: |
+          if [[ "${{ matrix.platform.target }}" == *-musl* ]]; then
+            export RUSTFLAGS="-C target-feature=-crt-static"
+          fi
           cargo build -p flipt-engine-ffi --release --target ${{ matrix.platform.target }}
 
       - if: startsWith(matrix.platform.name, 'Darwin')
