chore: set dynamic tags for musl
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/package-ffi-engine.yml
+++ b/.github/workflows/package-ffi-engine.yml
@@ -74,6 +74,11 @@ jobs:
             target/
           key: ${{ runner.os }}-${{ matrix.platform.target}}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
+      - name: Set RUSTFLAGS
+        if: startsWith(matrix.platform.target, '*-musl')
+        run: |
+          echo "RUSTFLAGS=-C target-feature=-crt-static" >> $GITHUB_ENV
+
       - name: Build ${{ matrix.platform.name }}
         uses: actions-rs/cargo@v1
         with:
